Working on views

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,15 +1,13 @@
-<div>
-    <h2>Welcome to Digital Scribble Pad!</h2>
-    <h3>Please enter your login information or create an account</h3>
-    <br/>
-    <h4>Login:</h4>
-    <label>Username: <input/></label>
-    <label>Password: <input/></label>
-    <button>Login</button>
-    <br/>
-    <h4>Create an account:</h4>
-    <label>Username: <input/></label>
-    <label>Password: <input/></label>
-    <label>Verify: <input/></label>
-    <button>Login</button>
-</div>
+<html>
+<head>
+    <title>Digital Scribble Pad</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+</head>
+<body>
+    <div class="container">
+        {{{body}}}    
+    </div>    
+</body>
+</html>
