Site is starting to come together, more work remains

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,10 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/custom/cookie.js"></script>
+    <script>
+        var root = "http://34.204.11.46:12233/";
+    </script>
 </head>
 <body>
     <div class="container">
