--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,18 +1,19 @@
+<script src="js/custom/login.js"></script>
 <div class="form-group">
     <h2>Welcome to Digital Scribble Pad!</h2>
     <h3>Please enter your username or create an account</h3>
     <br/>
     <h4>Login:</h4>
     <form>
-        <label>Username: <input class="form-control"/></label>
-        <button class="btn btn-primary">Login</button>
+        <label>Username: <input id="usernameLogin" class="form-control"/></label>
+        <span class="btn btn-primary" id="login">Login</span>
     </form>
     
     <br/>
     <h4>Create an account:</h4>
     <form action="#">
-        <label>Username: <input class="form-control"/></label>
-        <button class="btn btn-primary">Login</button>
+        <label>Username: <input id="usernameCreate" class="form-control"/></label>
+        <span class="btn btn-primary" id="createAccount">Login</span>
     </form>
     
 </div>
