--- a/views/myaccount.hbs
+++ b/views/myaccount.hbs
@@ -1,4 +1,5 @@
+<script src="/public/js/custom/myaccount.js"></script>
 <div>
-    <button class="btn btn-danger">Delete my account</button>
-    <button class="btn btn-primary">Home</button>
+    <span class="btn btn-danger" id="delete">Delete my account</span>
+    <span class="btn btn-primary" id="home">Home</span>
 </div>
