--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<script src="js/custom/login.js"></script>
+<script src="/public/js/custom/login.js"></script>
 <div class="form-group">
     <h2>Welcome to Digital Scribble Pad!</h2>
     <h3>Please enter your username or create an account</h3>
@@ -11,7 +11,7 @@
     
     <br/>
     <h4>Create an account:</h4>
-    <form action="#">
+    <form>
         <label>Username: <input id="usernameCreate" class="form-control"/></label>
         <span class="btn btn-primary" id="createAccount">Login</span>
     </form>
