Added some serverside sanity checks

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,14 +5,14 @@
     <br/>
     <h4>Login:</h4>
     <form>
-        <label>Username: <input id="usernameLogin" class="form-control"/></label>
+        <label>Username: <input id="usernameLogin" class="form-control" maxlength="254"/></label>
         <span class="btn btn-primary" id="login">Login</span>
     </form>
     
     <br/>
     <h4>Create an account:</h4>
     <form>
-        <label>Username: <input id="usernameCreate" class="form-control"/></label>
+        <label>Username: <input id="usernameCreate" class="form-control" maxlength="254"/></label>
         <span class="btn btn-primary" id="createAccount">Login</span>
     </form>
     
